# android_kernel_poco_f7_ultra

./: .gitignore  Android.mk  BUILD.bazel  Kconfig.ext  Makefile  OWNERS  README.md  amethyst.bzl  annibale.bzl  aurora.bzl  bixi.bzl  build.config.jr510  build.config.msm.kunzite  build.targets  build.yml  build_with_bazel.py  chenfeng.bzl  dada.bzl  flourite.bzl  gen_headers_arm.bp  gen_headers_arm64.bp  goku.bzl  haotian.bzl  houji.bzl  kenv.mk  kunzite.bzl  luming.bzl  manet.bzl  miro.bzl  modules.list.msm.amethyst  modules.list.msm.annibale  modules.list.msm.bixi  modules.list.msm.dada  modules.list.msm.flourite  modules.list.msm.goku  modules.list.msm.haotian  modules.list.msm.houji  modules.list.msm.kunzite  modules.list.msm.lahaina  modules.list.msm.manet  (+28 more)
android/: abi_gki_aarch64_qcom  abi_gki_aarch64_vivo  abi_gki_aarch64_xiaomi
block/: Kconfig  Makefile  elevator.c  partition-generic.c
block/cpq/: cpq.c  (+2 more)
drivers/: Kconfig  Makefile
fs/: Kconfig  Makefile  exec.c
gki/: OWNERS
init/: Kconfig  main.c
kernel/: delayacct.c  reboot.c  signal.c  stop_machine.c
lib/: Kconfig.debug
mm/: Kconfig  Makefile  backing-dev.c  compaction.c  filemap.c  huge_memory.c  hugetlb.c  internal.h  madvise.c  memcontrol.c  memory.c  memory_hotplug.c  migrate.c  mmap.c  page_alloc.c  rmap.c  vmalloc.c  vmscan.c  zsmalloc.c
scripts/: Makefile.build  Makefile.lib  gen_build_config.py
security/: commoncap.c
xring-configs/: BUILD.bazel  img_common_cfg.bzl  xring_fuzz_defconfig  (+1 more)
xring-configs/xiaomi/violin/: BUILD.bazel  vendor_dlkm_modules.violin  xiaomi_deconfig.violin
(+3493 files in other folders)
